<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserMainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp">

            <LinearLayout
                android:id="@+id/searchHandleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/searchHandleEdtText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_handle"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/seacrhHandleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="searchHandle"
                    android:text="@android:string/search_go" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="235dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="204dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingRight="12dp">

                    <TextView
                        android:id="@+id/userRankTextView"
                        android:layout_width="194dp"
                        android:layout_height="71dp"
                        android:gravity="center_vertical"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/rank"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userHandleTextView"
                        android:layout_width="189dp"
                        android:layout_height="63dp"
                        android:gravity="center_vertical"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/handle"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/userNameTextView"
                        android:layout_width="191dp"
                        android:layout_height="91dp"
                        android:gravity="center_vertical"
                        android:paddingStart="12dp"
                        android:paddingLeft="12dp"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/userImageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_photo"
                    android:padding="6dp"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <TextView
                android:id="@+id/userLocationTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/place"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userInstitueTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/institute"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userContestRatingTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userContributionTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/contribution"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userFriendTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/friend_of"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userEmailIdTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/email_id"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userLastVisitTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/last_visit"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/userRegiteredTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:text="@string/registered"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>