<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearLayout3"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center" >
        <!--        android:background="@color/colorPrimary"-->


        <EditText
            android:id="@+id/nameRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/handle"
            android:inputType="textPersonName" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/emailRegisterEditText"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:maxLines="1"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/passwordRegisterEditText"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionUnspecified"
            android:focusableInTouchMode="true"/>
        <!-- android:imeActionId="@+id/login" -->

        <EditText
            android:id="@+id/confirmPasswordRegisterEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/confirmPassword"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/showHidePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="togglePasswordShow"
            android:text="Show Password"
            android:textColor="@color/bg_register"
            android:textSize="16sp" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/registerUserButton"
            android:background="@color/colorAccent"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/action_sign_in_short"
            android:onClick="onRegisterClicked"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/sign_in_button"
            android:background="@null"
            android:textColor="@android:color/black"
            android:text="@string/btn_link_to_login"
            android:onClick="onLoginClicked"
            android:layout_marginTop="20dip"
            android:textSize="15dp"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        android:layout_marginBottom="111dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>