<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/submissionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#E4F0E4"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ContestLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contestLineLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contestCountTextView"
                    android:layout_width="37dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sno"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/contestNameTextView"
                    android:layout_width="215dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/div_name"
                    android:textColor="#0000ff" />

                <TextView
                    android:id="@+id/contestRankTextView"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/digits"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/contestRatingChangeTextView"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sno"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/contestNewRatingTextView"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/digits"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contestTitleLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00D17E7E"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/contestTitleNowTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="#00F5F1F1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/became"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/pupil"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/userOldHandleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/handle"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/arrowTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/arrow"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/userNewHandleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/handle"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>