<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.we3.stalkforces.activities.LoginActivity">




    <LinearLayout android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearLayout4"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center">
        <!--        android:background="@color/colorPrimary">-->

        <EditText
            android:id="@+id/emailLoginActivityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@color/btn_login_bg" />

        <EditText
            android:id="@+id/passwordLoginActivityEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/btn_login_bg" />

        <TextView
            android:id="@+id/showHidePasswordLoginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="togglePasswordShow"
            android:text="Show Password"
            android:textColor="@color/bg_register"
            android:textSize="16sp" />

        <!-- Login Button -->

        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:id="@+id/login_btnLoginActivityButton"
            android:background="@color/colorAccent"
            android:textColor="@android:color/black"
            android:text="@string/btn_login"
            android:onClick="loginButtonClicked"
            android:layout_marginTop="20dip"/>

        <Button
            android:id="@+id/sign_in_buttonRegisterButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:onClick="onRegisterClicked"
            android:text="@string/btn_link_to_register_in"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLoginActivityProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        android:layout_marginBottom="111dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>